--- a/app/src/main/res/layout/fragment_new_product.xml
+++ b/app/src/main/res/layout/fragment_new_product.xml
@@ -108,29 +108,42 @@
                         tools:targetApi="p"
                         android:text="" />
                 </com.google.android.material.textfield.TextInputLayout>
-                <com.google.android.material.textfield.TextInputLayout
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Ingredients"
-                    app:hintTextColor="@color/lightOrange"
-                    app:boxStrokeColor="@color/lightOrange"
-                    android:layout_marginTop="12dp"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/etEmail"
-                        android:ellipsize="end"
+                    android:layout_marginTop="12dp">
+                    <EditText
+                        android:id="@+id/etIngredient"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_width="match_parent"
-                        android:padding="16dp"
-                        android:textColorHint="@color/gray_500"
-                        android:textSize="16sp"
-                        android:textColor="@color/gray_800"
+                        android:textColor="@color/black"
+                        android:textSize="20sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:hint="Enter Ingredient"
+                        tools:ignore="HardcodedText"/>
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btn_add_ingredient"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toTopOf="@id/etIngredient"
+                        app:layout_constraintBottom_toBottomOf="@id/etIngredient"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_8"
+                        android:ellipsize="end"
+                        android:singleLine="true"
+                        android:textAllCaps="true"
+                        android:textColor="@color/orange_400"
                         android:textFontWeight="400"
-                        tools:ignore="RtlSymmetry"
-                        tools:targetApi="p"
-                        android:text="" />
-                </com.google.android.material.textfield.TextInputLayout>
-
+                        android:textSize="16sp"
+                        tools:ignore="UnusedAttribute"
+                        android:text="add" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+                <ListView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"/>
                 <ImageView
                     android:id="@+id/imgDescription"
                     android:layout_width="match_parent"
