--- a/app/src/main/res/layout/fragment_new_product.xml
+++ b/app/src/main/res/layout/fragment_new_product.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewmodel"
-            type="xyz.daijoubuteam.foodshoppingappadmin.eatery.newproduct.NewProductViewModel" />
+            type="xyz.daijoubuteam.foodshoppingappadmin.ui.products.newproduct.NewProductViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
