--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -14,7 +14,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginVertical="24dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="20dp"
             android:textSize="20sp"
             android:fontFamily="@font/avenir_next_lt_pro"
             android:textStyle="bold"
@@ -23,7 +23,7 @@
             android:id="@+id/productRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:nestedScrollingEnabled="false"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -41,7 +41,8 @@
             android:layout_gravity="bottom|end"
             android:contentDescription="@string/add_product"
             app:srcCompat="@drawable/ic_add"
-            android:backgroundTint="@color/lightOrange"
+            app:backgroundTint="@color/orange_400"
+            app:tint="@null"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginEnd="30dp"
