--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -10,15 +10,27 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:background="@drawable/rectangle_bg_white"
-        tools:ignore="ExtraText">
+        android:padding="16dp"
+        tools:ignore="ExtraText"
+        android:elevation="4dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:background="?attr/selectableItemBackground">
+        <ImageView android:id="@+id/imgAvatar"
+            android:layout_height="90dp"
+            android:layout_width="90dp"
+            android:scaleType="fitCenter"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:src="@drawable/img_rectangle44"
+            tools:src="@drawable/img_rectangle44"
+            tools:ignore="ContentDescription" />
         <TextView
             android:ellipsize="end"
             android:id="@+id/tvEateryName"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
             android:layout_width="0dp"
             android:singleLine="true"
             app:layout_constraintEnd_toEndOf="parent"
@@ -36,7 +48,6 @@
             android:ellipsize="end"
             android:gravity="start"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="6dp"
             android:layout_width="0dp"
@@ -51,26 +62,11 @@
             android:text="@{product.ingredients.toString().substring(1,product.ingredients.toString().length())}"
             tools:text="Shrimp, mushroom, cheese, tomato"
             tools:ignore="UnusedAttribute" />
-        <ImageView android:id="@+id/imgAvatar"
-            android:layout_height="90dp"
-            android:layout_width="90dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginVertical="12dp"
-            android:scaleType="fitXY"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/tvEateryName"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/img_rectangle44"
-            tools:src="@drawable/img_rectangle44"
-            tools:ignore="ContentDescription" />
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintPrice"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="12dp"
             android:layout_width="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imgAvatar"
@@ -87,46 +83,38 @@
                 android:textFontWeight="500"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/viewLine"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:ignore="HardcodedText,UnusedAttribute"
-                android:text="@{Double.toString(product.newPrice)}"
+                android:text="@{'$' + Double.toString(product.newPrice)}"
                 tools:text="$ 12.00" />
             <TextView
                 android:id="@+id/tvOldPrice"
                 android:ellipsize="end"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="1dp"
-                android:layout_marginStart="1dp"
-                android:layout_width="wrap_content"
+                android:layout_marginStart="20dp"
                 android:singleLine="true"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/viewLine"
-                app:layout_constraintHorizontal_bias="0.33"
-                app:layout_constraintStart_toStartOf="@+id/viewLine"
-                app:layout_constraintTop_toTopOf="@+id/tvNewPrice"
+                app:layout_constraintStart_toEndOf="@+id/tvNewPrice"
                 android:textColor="@color/gray_500"
                 android:textSize="12sp"
                 android:fontFamily="@font/avenir_next_lt_pro"
                 android:textFontWeight="500"
-                android:text="@{Double.toString(product.oldPrice)}"
+                android:text="@{'$' + Double.toString(product.oldPrice)}"
                 tools:text="$ 20.00"
                 tools:ignore="HardcodedText,UnusedAttribute" />
             <View
                 android:background="@drawable/rectangle_border_gray_500"
                 android:id="@+id/viewLine"
-                android:layout_height="1dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="106dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="8dp"
-                android:layout_width="44dp"
-                app:layout_constraintBottom_toBottomOf="@+id/tvNewPrice"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.09"
-                app:layout_constraintStart_toEndOf="@+id/tvNewPrice"
-                app:layout_constraintTop_toTopOf="@+id/tvOldPrice"/>
+                android:layout_height="2dp"
+                android:layout_width="0dp"
+                app:layout_constraintTop_toTopOf="@+id/tvOldPrice"
+                app:layout_constraintBottom_toBottomOf="@+id/tvOldPrice"
+                app:layout_constraintStart_toStartOf="@+id/tvOldPrice"
+                app:layout_constraintEnd_toEndOf="@id/tvOldPrice" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
