--- a/app/src/main/res/layout/fragment_new_product.xml
+++ b/app/src/main/res/layout/fragment_new_product.xml
@@ -57,7 +57,6 @@
             android:clipToPadding="false"
             android:fillViewport="true"
             android:orientation="vertical"
-            android:layout_marginTop="24dp"
             android:layout_marginBottom="14dp"
             app:layout_constraintVertical_bias="0.0">
             <LinearLayout
@@ -79,13 +78,38 @@
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:padding="16dp"
-                        android:text=""
+                        android:text="@{viewmodel.product.name}"
                         android:textColor="@color/gray_800"
                         android:textColorHint="@color/gray_500"
                         android:textFontWeight="400"
                         android:textSize="16sp"
                         tools:ignore="RtlSymmetry"
                         tools:targetApi="p" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/description"
+                    app:hintTextColor="@color/lightOrange"
+                    app:boxStrokeColor="@color/lightOrange"
+                    android:layout_marginTop="12dp"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/etDescription"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:padding="16dp"
+                        android:text="@{viewmodel.product.description}"
+                        android:textColor="@color/gray_800"
+                        android:textColorHint="@color/gray_500"
+                        android:textFontWeight="400"
+                        android:textSize="16sp"
+                        tools:ignore="RtlSymmetry"
+                        tools:targetApi="p" />
+
                 </com.google.android.material.textfield.TextInputLayout>
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
@@ -95,20 +119,21 @@
                     app:boxStrokeColor="@color/lightOrange"
                     android:layout_marginTop="12dp"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/etPrice"
-                        android:ellipsize="end"
-                        android:layout_height="wrap_content"
                         android:layout_width="match_parent"
-                        android:padding="16dp"
-                        android:textColorHint="@color/gray_500"
-                        android:textSize="16sp"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:inputType="numberDecimal"
+                        android:padding="16dp"
+                        android:text="@{viewmodel.product.newPrice.toString()}"
                         android:textColor="@color/gray_800"
+                        android:textColorHint="@color/gray_500"
                         android:textFontWeight="400"
+                        android:textSize="16sp"
                         tools:ignore="RtlSymmetry"
-                        tools:targetApi="p"
-                        android:text="" />
+                        tools:targetApi="p" />
                 </com.google.android.material.textfield.TextInputLayout>
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -142,12 +167,15 @@
                         android:textFontWeight="400"
                         android:textSize="16sp"
                         tools:ignore="UnusedAttribute"
-                        android:text="add" />
+                        android:text="@string/add" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvIngredients"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
+                    android:nestedScrollingEnabled="false"
+                    android:orientation="vertical"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     tools:listitem="@layout/item_ingredient"
                     tools:itemCount="6"
                     android:layout_marginTop="12dp"/>
@@ -155,7 +183,7 @@
                     android:id="@+id/imgDescription"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
+                    app:imageUrl="@{viewmodel.product.img}"
                     android:layout_marginVertical="10dp"
                     android:scaleType="fitXY"/>
                 <androidx.appcompat.widget.AppCompatButton
