--- a/app/src/main/res/layout/fragment_new_product.xml
+++ b/app/src/main/res/layout/fragment_new_product.xml
@@ -172,37 +172,43 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rvIngredients"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="wrap_content"
                     android:nestedScrollingEnabled="false"
                     android:orientation="vertical"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     tools:listitem="@layout/item_ingredient"
                     tools:itemCount="6"
                     android:layout_marginTop="12dp"/>
-                <ImageView
-                    android:id="@+id/imgDescription"
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:imageUrl="@{viewmodel.product.img}"
-                    android:layout_marginVertical="10dp"
-                    android:scaleType="fitXY"/>
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/btn_select_image"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    app:layout_constraintTop_toBottomOf="@id/imgDescription"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:background="@drawable/rectangle_bg_deep_orange_a200_radius_6"
-                    android:ellipsize="end"
-                    android:singleLine="true"
-                    android:textAllCaps="true"
+                    android:layout_height="wrap_content">
+                    <ImageView
+                        android:id="@+id/imgDescription"
+                        android:layout_width="354dp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="10dp"
+                        android:scaleType="centerCrop"/>
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/btn_select_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        app:layout_constraintTop_toBottomOf="@id/imgDescription"
+                        app:layout_constraintStart_toStartOf="parent"
+                        android:background="@drawable/rectangle_bg_deep_orange_a200_radius_6"
+                        android:ellipsize="end"
+                        android:singleLine="true"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white_A700"
+                        android:textFontWeight="400"
+                        android:textSize="16sp"
+                        tools:ignore="UnusedAttribute"
+                        android:text="select image" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
-                    android:textColor="@color/white_A700"
-                    android:textFontWeight="400"
-                    android:textSize="16sp"
-                    tools:ignore="UnusedAttribute"
-                    android:text="select image" />
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
         <androidx.appcompat.widget.AppCompatButton
