--- a/app/src/main/res/layout/fragment_edit_product.xml
+++ b/app/src/main/res/layout/fragment_edit_product.xml
@@ -159,14 +159,20 @@
                                     tools:targetApi="p"
                                     android:text="@{viewModel.ingredientString}" />
                             </com.google.android.material.textfield.TextInputLayout>
-
-                        <ImageView
-                            android:id="@+id/imgDescription"
+                        <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginVertical="10dp"
-                            android:scaleType="fitCenter"
-                            app:imageUrl="@{viewModel.selectedProperty.img.toString()}"/>
+                            android:layout_height="wrap_content">
+                            <ImageView
+                                android:id="@+id/imgDescription"
+                                android:layout_width="match_parent"
+                                android:layout_height="0dp"
+                                app:layout_constraintDimensionRatio="1:1"
+                                android:layout_marginVertical="10dp"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintLeft_toLeftOf="parent"
+                                app:layout_constraintRight_toRightOf="parent"
+                                app:imageUrl="@{viewModel.selectedProperty.img.toString()}"/>
+                        </androidx.constraintlayout.widget.ConstraintLayout>
                         <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/btn_select_image"
                             android:layout_width="match_parent"
