--- a/app/src/main/res/layout/fragment_new_product.xml
+++ b/app/src/main/res/layout/fragment_new_product.xml
@@ -182,21 +182,30 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-                    <ImageView
-                        android:id="@+id/imgDescription"
-                        android:layout_width="354dp"
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/constraintImgDescription"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="10dp"
-                        android:scaleType="centerCrop"/>
+                        app:layout_constraintTop_toTopOf="parent">
+                        <ImageView
+                            android:id="@+id/imgDescription"
+                            android:layout_width="wrap_content"
+                            android:layout_height="0dp"
+                            app:layout_constraintDimensionRatio="1:1"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintRight_toRightOf="parent"
+                            android:layout_marginVertical="10dp" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_select_image"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
-                        app:layout_constraintTop_toBottomOf="@id/imgDescription"
+                        app:layout_constraintTop_toBottomOf="@id/constraintImgDescription"
                         app:layout_constraintStart_toStartOf="parent"
                         android:background="@drawable/rectangle_bg_deep_orange_a200_radius_6"
                         android:ellipsize="end"
