Get livedata product list and delete product

--- a/app/src/main/res/layout/fragment_edit_product.xml
+++ b/app/src/main/res/layout/fragment_edit_product.xml
@@ -213,6 +213,7 @@
                 android:textColor="@color/orange_400"
                 android:textFontWeight="400"
                 android:textSize="16sp"
+                android:onClick="@{() -> viewModel.onDeleteProduct()}"
                 tools:ignore="UnusedAttribute"
                 android:text="delete" />
             <androidx.appcompat.widget.AppCompatButton
