update edit product

--- a/app/src/main/res/layout/fragment_new_product.xml
+++ b/app/src/main/res/layout/fragment_new_product.xml
@@ -78,7 +78,7 @@
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:padding="16dp"
-                        android:text="@{viewmodel.product.name}"
+                        android:text="@={viewmodel.name}"
                         android:textColor="@color/gray_800"
                         android:textColorHint="@color/gray_500"
                         android:textFontWeight="400"
@@ -102,7 +102,7 @@
                         android:layout_height="wrap_content"
                         android:ellipsize="end"
                         android:padding="16dp"
-                        android:text="@{viewmodel.product.description}"
+                        android:text="@={viewmodel.description}"
                         android:textColor="@color/gray_800"
                         android:textColorHint="@color/gray_500"
                         android:textFontWeight="400"
@@ -127,7 +127,7 @@
                         android:ellipsize="end"
                         android:inputType="numberDecimal"
                         android:padding="16dp"
-                        android:text="@{viewmodel.product.newPrice.toString()}"
+                        android:text="@={viewmodel.price}"
                         android:textColor="@color/gray_800"
                         android:textColorHint="@color/gray_500"
                         android:textFontWeight="400"
@@ -194,6 +194,7 @@
                             android:id="@+id/imgDescription"
                             android:layout_width="wrap_content"
                             android:layout_height="0dp"
+                            app:imageUrl="@{viewmodel.image}"
                             app:layout_constraintDimensionRatio="1:1"
                             app:layout_constraintTop_toTopOf="parent"
                             app:layout_constraintLeft_toLeftOf="parent"
@@ -230,6 +231,7 @@
             android:ellipsize="end"
             android:singleLine="true"
             android:textAllCaps="true"
+            android:onClick="@{() -> viewmodel.onAddProduct()}"
             android:textColor="@color/white_A700"
             android:textFontWeight="400"
             android:textSize="16sp"
