--- a/app/src/main/res/layout/fragment_edit_product.xml
+++ b/app/src/main/res/layout/fragment_edit_product.xml
@@ -70,10 +70,42 @@
                             android:textColor="@color/orange_400"
                             android:textSize="30sp"
                             android:textStyle="bold"
+                            android:text="@={viewModel.selectedProperty.name}"
                             android:backgroundTint="@color/orange_400"
                             android:textCursorDrawable="@color/orange_400"
-                            android:text="@{viewModel.selectedProperty.name}"
                             tools:text="Pizza"/>
+                        <TextView
+                            android:id="@+id/tvDescription"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/black"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            android:text="Description:"
+                            tools:ignore="HardcodedText"/>
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            app:hintTextColor="@color/lightOrange"
+                            app:boxStrokeColor="@color/lightOrange"
+                            android:layout_marginTop="12dp"
+                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+
+                            <com.google.android.material.textfield.TextInputEditText
+                                android:id="@+id/etDescription"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:ellipsize="end"
+                                android:padding="16dp"
+                                android:text="@={viewModel.selectedProperty.description}"
+                                android:textColor="@color/gray_800"
+                                android:textColorHint="@color/gray_500"
+                                android:textFontWeight="400"
+                                android:textSize="16sp"
+                                tools:ignore="RtlSymmetry"
+                                tools:targetApi="p" />
+
+                        </com.google.android.material.textfield.TextInputLayout>
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -91,16 +123,16 @@
                                 android:text="Current Price: $"
                                 tools:ignore="HardcodedText"/>
                             <EditText
+                                android:id="@+id/etNewPrice"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textColor="@color/black"
                                 android:textSize="20sp"
-                                android:digits="0123456789."
+                                android:text="@={viewModel.newPrice}"
                                 android:inputType="numberDecimal"
                                 app:layout_constraintStart_toEndOf="@id/tvCurrentPrice"
                                 app:layout_constraintTop_toTopOf="@id/tvCurrentPrice"
                                 app:layout_constraintBottom_toBottomOf="@id/tvCurrentPrice"
-                                android:text="@{viewModel.selectedProperty.newPrice.toString()}"
                                 tools:text="12.00"
                                 tools:ignore="HardcodedText"/>
                         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -121,14 +153,16 @@
                                 android:text="Old Price: $"
                                 tools:ignore="HardcodedText"/>
                             <EditText
+                                android:id="@+id/etOldPrice"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textColor="@color/black"
                                 android:textSize="20sp"
+                                android:text="@={viewModel.oldPrice}"
+                                android:inputType="numberDecimal"
                                 app:layout_constraintStart_toEndOf="@id/tvOldPrice"
                                 app:layout_constraintTop_toTopOf="@id/tvOldPrice"
                                 app:layout_constraintBottom_toBottomOf="@id/tvOldPrice"
-                                android:text="@{viewModel.selectedProperty.oldPrice.toString()}"
                                 tools:text="15.00"
                                 tools:ignore="HardcodedText"/>
                         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -141,24 +175,50 @@
                                 android:textStyle="bold"
                                 android:text="Ingredients: "
                                 tools:ignore="HardcodedText"/>
-                            <com.google.android.material.textfield.TextInputLayout
-                                android:layout_width="match_parent"
+                        <androidx.constraintlayout.widget.ConstraintLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="12dp">
+                            <EditText
+                                android:id="@+id/etIngredient"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                app:boxStrokeColor="@color/lightOrange"
-                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-                                <com.google.android.material.textfield.TextInputEditText
-                                    android:id="@+id/etIngredients"
-                                    android:ellipsize="end"
-                                    android:layout_height="wrap_content"
-                                    android:layout_width="match_parent"
-                                    android:padding="10dp"
-                                    android:textSize="18sp"
-                                    android:textColor="@color/gray_800"
-                                    android:textFontWeight="400"
-                                    tools:ignore="RtlSymmetry"
-                                    tools:targetApi="p"
-                                    android:text="@{viewModel.ingredientString}" />
-                            </com.google.android.material.textfield.TextInputLayout>
+                                android:textColor="@color/black"
+                                android:textSize="20sp"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                android:hint="Enter Ingredient"
+                                android:text="@={viewModel.ingredient}"
+                                tools:ignore="HardcodedText"/>
+                            <androidx.appcompat.widget.AppCompatButton
+                                android:id="@+id/btn_add_ingredient"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                app:layout_constraintTop_toTopOf="@id/etIngredient"
+                                app:layout_constraintBottom_toBottomOf="@id/etIngredient"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                android:background="@drawable/rectangle_bg_white_a700_border_gray_300_radius_8"
+                                android:ellipsize="end"
+                                android:singleLine="true"
+                                android:textAllCaps="true"
+                                android:onClick="@{() -> viewModel.onAddIngredient()}"
+                                android:textColor="@color/orange_400"
+                                android:textFontWeight="400"
+                                android:textSize="16sp"
+                                tools:ignore="UnusedAttribute"
+                                android:text="@string/add" />
+                        </androidx.constraintlayout.widget.ConstraintLayout>
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/rvIngredients"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:nestedScrollingEnabled="false"
+                            android:orientation="vertical"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            tools:listitem="@layout/item_ingredient"
+                            tools:itemCount="6"
+                            android:layout_marginTop="12dp"/>
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
@@ -166,12 +226,12 @@
                                 android:id="@+id/imgDescription"
                                 android:layout_width="match_parent"
                                 android:layout_height="0dp"
+                                app:imageUrl="@{viewModel.selectedProperty.img}"
                                 app:layout_constraintDimensionRatio="1:1"
                                 android:layout_marginVertical="10dp"
                                 app:layout_constraintTop_toTopOf="parent"
                                 app:layout_constraintLeft_toLeftOf="parent"
-                                app:layout_constraintRight_toRightOf="parent"
-                                app:imageUrl="@{viewModel.selectedProperty.img.toString()}"/>
+                                app:layout_constraintRight_toRightOf="parent"/>
                         </androidx.constraintlayout.widget.ConstraintLayout>
                         <androidx.appcompat.widget.AppCompatButton
                             android:id="@+id/btn_select_image"
@@ -227,6 +287,7 @@
                 android:layout_marginLeft="8dp"
                 android:background="@drawable/rectangle_bg_blue_a200_radius_6"
                 android:ellipsize="end"
+                android:onClick="@{() -> viewModel.updateProductInfo()}"
                 android:singleLine="true"
                 android:textAllCaps="true"
                 android:textColor="@color/white_A700"
