--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_products"
         android:icon="@drawable/ic_dishes"
-        android:title="@string/title_dishes" />
+        android:title="@string/products" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_orders"
         android:icon="@drawable/ic_order"
         android:title="@string/title_order" />
 
