update back button

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -32,7 +32,11 @@
     <fragment
         android:id="@+id/newProductFragment"
         android:name="xyz.daijoubuteam.foodshoppingappadmin.ui.products.newproduct.NewProductFragment"
-        android:label="NewProductFragment" />
+        android:label="NewProductFragment" >
+        <action
+            android:id="@+id/action_newProductFragment_to_navigation_products"
+            app:destination="@id/navigation_products" />
+    </fragment>
     <fragment
         android:id="@+id/editProductFragment"
         android:name="xyz.daijoubuteam.foodshoppingappadmin.ui.products.editproduct.EditProductFragment"
