--- a/app/src/main/res/layout/fragment_new_product.xml
+++ b/app/src/main/res/layout/fragment_new_product.xml
@@ -19,15 +19,18 @@
             android:id="@+id/tvHeader"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_margin="24dp"
-            android:paddingBottom="20dp"
+            android:layout_marginVertical="24dp"
             android:orientation="horizontal">
-            <ImageView
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/imageChevronleft"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                app:backgroundTint="#4DFFFFFF"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:borderWidth="0dp"
+                app:elevation="0dp"
+                app:pressedTranslationZ="0dp"
                 android:scaleType="fitXY"
-                android:src="@drawable/img_chevronleft"
+                app:srcCompat="@drawable/img_chevronleft"
                 app:layout_constraintBottom_toBottomOf="@id/new_product"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/new_product"
@@ -45,8 +48,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toTopOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
         <androidx.core.widget.NestedScrollView
             android:id="@+id/productScrollView"
