--- a/app/src/main/res/layout/item_product_in_order.xml
+++ b/app/src/main/res/layout/item_product_in_order.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="product"
-            type="xyz.daijoubuteam.foodshoppingappadmin.model.Product" />
+            type="xyz.daijoubuteam.foodshoppingappadmin.model.ProductInOrder" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_height="wrap_content"
@@ -16,17 +16,23 @@
         android:clickable="true"
         android:focusable="true"
         android:background="?attr/selectableItemBackground">
-        <ImageView android:id="@+id/imgAvatar"
-            android:layout_height="90dp"
-            android:layout_width="90dp"
-            android:scaleType="fitCenter"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardProductAvatar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="8dp"
-            android:src="@drawable/img_rectangle44"
-            tools:src="@drawable/img_rectangle44"
-            tools:ignore="ContentDescription" />
+            app:cardCornerRadius="12dp">
+            <ImageView android:id="@+id/imgAvatar"
+                android:layout_height="90dp"
+                android:layout_width="90dp"
+                android:scaleType="fitCenter"
+                app:imageUrl="@{product.product.img}"
+                tools:src="@drawable/img_rectangle44"
+                tools:ignore="ContentDescription" />
+        </androidx.cardview.widget.CardView>
         <TextView
             android:id="@+id/tvProductName"
             android:ellipsize="end"
@@ -35,14 +41,14 @@
             android:layout_width="0dp"
             android:singleLine="true"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imgAvatar"
+            app:layout_constraintStart_toEndOf="@+id/cardProductAvatar"
             app:layout_constraintTop_toTopOf="parent"
             android:textSize="16sp"
             android:textColor="@color/bluegray_700"
             android:fontFamily="@font/avenir_next_lt_pro"
             android:textFontWeight="400"
+            android:text="@{product.product.name}"
             tools:text="Shrimp Pizza"
-            android:text="@{product.name}"
             tools:ignore="HardcodedText,UnusedAttribute" />
         <TextView
             android:id="@+id/tvPrice"
@@ -55,11 +61,11 @@
             android:textFontWeight="500"
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@id/tvProductName"
-            app:layout_constraintStart_toEndOf="@id/imgAvatar"
+            app:layout_constraintStart_toEndOf="@id/cardProductAvatar"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             tools:ignore="HardcodedText,UnusedAttribute"
-            android:text="@{'$' + Double.toString(product.newPrice)}"
+            android:text="@{product.price.toString()}"
             tools:text="$ 12.00" />
         <TextView
             android:id="@+id/tvQuantity"
@@ -71,13 +77,13 @@
             android:layout_width="0dp"
             android:singleLine="true"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imgAvatar"
+            app:layout_constraintStart_toEndOf="@+id/cardProductAvatar"
             app:layout_constraintTop_toBottomOf="@+id/tvPrice"
             android:textColor="@color/gray_500"
             android:textSize="14sp"
             android:fontFamily="@font/avenir_next_lt_pro"
             android:textFontWeight="500"
-            android:text="@{product.ingredients.toString().substring(1,product.ingredients.toString().length())}"
+            android:text="@{product.quantity.toString()}"
             tools:text="Số lượng: 5"
             tools:ignore="UnusedAttribute" />
     </androidx.constraintlayout.widget.ConstraintLayout>
