--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -8,7 +8,7 @@
     </data>
 
     <LinearLayout
-        android:id="@+id/authenticateCoordinatorLayout"
+        android:id="@+id/activity_auth"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
