--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,8 +12,12 @@
         android:title="@string/title_order" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_report"
         android:icon="@drawable/ic_report"
         android:title="@string/title_report" />
 
+    <item
+        android:id="@+id/navigation_profile"
+        android:icon="@drawable/ic_profile"
+        android:title="@string/title_profile" />
 </menu>
