--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -69,6 +69,9 @@
         <action
             android:id="@+id/action_navigation_profile_to_reviewsFragment"
             app:destination="@id/reviewsFragment" />
+        <action
+            android:id="@+id/action_navigation_profile_to_editProfileFragment"
+            app:destination="@id/editProfileFragment" />
     </fragment>
     <fragment
         android:id="@+id/reviewsFragment"
@@ -76,6 +79,14 @@
         android:label="ReviewsFragment" >
         <action
             android:id="@+id/action_reviewsFragment_to_navigation_profile"
+            app:destination="@id/navigation_profile" />
+    </fragment>
+    <fragment
+        android:id="@+id/editProfileFragment"
+        android:name="xyz.daijoubuteam.foodshoppingappadmin.ui.profile.editprofile.EditProfileFragment"
+        android:label="EditProfileFragment" >
+        <action
+            android:id="@+id/action_editProfileFragment_to_navigation_profile"
             app:destination="@id/navigation_profile" />
     </fragment>
 </navigation>
