Update login logout

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -96,6 +96,7 @@
                 android:background="@android:color/darker_gray" />
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnLogout"
                 app:icon="@drawable/ic_logout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
